--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "el-table-infinite-scroll": "^3.0.3",
     "element-plus": "^2.4.2",
     "gsap": "^3.12.2",
     "nprogress": "^0.2.0",
